--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="blue">#1F4EFA</color>
     <color name="darkblue">#1D419F</color>
+    <color name="pink">#F47DBB</color>
 </resources>
